# ProjetoOOSistamaAcademicoCpp98Cmake

./: Aluno.cpp  Aluno.h  AlunoRel.cpp  AlunoRel.h  CMakeLists.txt  DataAtual.cpp  DataAtual.h  Departamento.cpp  Departamento.h  DepartamentoRel.cpp  DepartamentoRel.h  Disciplina.cpp  Disciplina.h  DisciplinaRel.cpp  DisciplinaRel.h  ListaAlunos.cpp  ListaAlunos.h  ListaDepartamentos.cpp  ListaDepartamentos.h  ListaDisciplinas.cpp  ListaDisciplinas.h  Pessoa.cpp  Pessoa.h  Principal.cpp  Principal.h  Professor.cpp  Professor.h  README.md  SistemaAcademicoUML.puml  Universidade.cpp  Universidade.h  main.cpp
