cmake_minimum_required(VERSION 3.22)
project(ProjetoOOSistemaAcademicoCpp98Cmake)

set(CMAKE_CXX_STANDARD 98)

add_executable(ProjetoOOSistemaAcademicoCpp98Cmake main.cpp Aluno.cpp Aluno.h AlunoRel.cpp AlunoRel.h DataAtual.cpp DataAtual.h Departamento.cpp Departamento.h Disciplina.cpp Disciplina.h Pessoa.cpp Pessoa.h Principal.cpp Principal.h Professor.cpp Professor.h Universidade.cpp Universidade.h DisciplinaRel.cpp DisciplinaRel.h ListaAlunos.cpp ListaAlunos.h ListaDisciplinas.cpp ListaDisciplinas.h ListaDepartamentos.cpp ListaDepartamentos.h DepartamentoRel.cpp DepartamentoRel.h)
